--- a/main.html
+++ b/main.html
@@ -8,6 +8,28 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<nav>
+		<ul>
+			<li><a href="#home">Home</a></li>
+			<li><a href="#home">About Us</a></li>
+			<li><a href="#home">Contact Us</a></li>
+		</ul>
+	</nav>
+
+	<section>
+		<div>
+		<h2>3 Random Images</h2>
+		<img src="https://picsum.photos/id/123/200/300" alt="Random image">
+		</div>
+		<div>
+			<h2>3 Random Images</h2>
+		<img src="https://picsum.photos/id/124/200/300" alt="Random image">
+		</div>
+		<div>
+			<h2>3 Random Images</h2>
+		<img src="https://picsum.photos/id/125/200/300" alt="Random image">
+		</div>
+	</section>
     <script type="text/javascript" src="./script.js">
 </script>
 
