--- a/main.html
+++ b/main.html
@@ -20,9 +20,11 @@
     <div>
         <img src="https://picsum.photos/id/123/200/300" alt="Random image">
     </div>
+	<h2>3 Random Images</h2>
     <div>
         <img src="https://picsum.photos/id/124/200/300" alt="Random image">
     </div>
+	<h2>3 Random Images</h2>
     <div>
         <img src="https://picsum.photos/id/125/200/300" alt="Random image">
     </div>
