--- a/main.html
+++ b/main.html
@@ -18,7 +18,7 @@
 <section>
   
     <div>
-		  <h3>3 Random Images</h3>
+		  <h3>3 random images</h3>
         <img src="https://picsum.photos/id/123/200/300" alt="Random image">
 		 <img src="https://picsum.photos/id/124/200/300" alt="Random image">
 		  <img src="https://picsum.photos/id/125/200/300" alt="Random image">
